--- a/UNAG/templates/general/documentos_index.html
+++ b/UNAG/templates/general/documentos_index.html
@@ -2,7 +2,7 @@
 {% block header %}
 	<div class="container">
 		<a class="pull-right" href="{% url 'vista_main_first' %}">
-			Volver al Men&uacute;
+			Volver al Men&uacute; asdasd
 		</a>
 		<legend></legend>
 	</div>
