--- a/UNAG/templates/general/new_persona_recursohumano.html
+++ b/UNAG/templates/general/new_persona_recursohumano.html
@@ -1,129 +1,131 @@
-{% extends "base_censo2.html" %}
-{% block extrahead %}
+{% extends "general/menu.html" %}
 
-	<script type="text/javascript">
-		/*$(document).ready(function(){
-			$('#myModal2').modal('hide')
-		});*/
+{% block css %}
+	<link rel="stylesheet" type="text/css" href="/media/css/select2.min.css">
+{% endblock css %}
 
-		function enviar(bandera){
-			var bandera=bandera;
-			var id_departamento=$("#id_departamento").val();
-			var id_municipio=$("#id_municipio").val();
-			var id_aldea=$("#id_aldea").val();
-			var id_caserio=$("#id_caserio").val();
+{% block header %}
+  <h1>
+  Formulario Registro de Personas
+  </h1>
+  <ol class="breadcrumb">
+    <li><i class="fa fa-dashboard"></i> Administración</li>
+    <li>Registro de Personas</li>
+    <li>Agregar</li>
+  </ol>
+{% endblock  %}
 
-			var sendInfo = $('#frm_persona').serialize();
 
-			if (bandera=='d'){
-				name='municipio';
-				sendInfo+="&bandera="+bandera+"&id="+id_departamento+"&name="+name;
-			}else if(bandera=='m'){
-				name='aldea';
-				sendInfo+="&bandera="+bandera+"&id="+id_municipio+"&name="+name;
-			}else if(bandera=='a'){
-				name='caserio';
-				sendInfo+="&bandera="+bandera+"&id="+id_aldea+"&name="+name;
-			}else if(bandera=='c'){
-				name='barrio';
-				sendInfo+="&bandera="+bandera+"&id="+id_caserio+"&name="+name;
-			}
-			
-			//alert("id: "+id);
-			
-			
-			$('#myModal').modal('show')
-			$.post(
-            // url to post
-            "{% url 'vista_persona_ajax_municipio' %}",
-            // args
-            sendInfo,
-            // response callback
-            function(data){
-                // uncomment if you wanna to see objects on firebug console
-                //console.log(data,text,xhrobject)
-                var nada="";
-                //alert(data);
-                //$('#carga').html(nada);
-                $('#'+name).html(data);
-                //actualizaChosen();
-                $('#id_departamento').attr('onchange','enviar("d");');
-				$('#id_municipio').attr('onchange','enviar("m");');
-				$('#id_aldea').attr('onchange','enviar("a");');
-				$('#id_caserio').attr('onchange','enviar("c");');
-				$('#myModal').modal('hide')
-            });
-		}
-	</script>
-{% endblock %}
-{% block navlist %}
-	<div class="panel panel-primary">
-		<div class="panel-heading">Instrucciones</div>
-		  <div class="panel-body">
-		    	Llene atenta y cuidadosamente el siguiente formulario, completando todos los datos solicitados en el mismo.<br>
-		    	<p>
-					<a href="{% url 'vista_administracion_recursohumano' %}" class="btn btn-success">
-						<span class="glyphicon glyphicon-arrow-left">&nbsp;</span>Volver a la administración
-					</a>
-				</p>
-		  </div>
-	</div>
-{% endblock %}
-{% block container %}
-	<div class="container">
-		<!-- Modal -->
-	  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-	    <div class="modal-dialog">
-	      <div class="modal-content">
-	        <div class="modal-body">
-	        	<center><img width="235px" height="235px" src="/media/images/cargando.gif"></center>
-	        </div>
-	      </div><!-- /.modal-content -->
-	    </div><!-- /.modal-dialog -->
-	  </div><!-- /.modal -->
-		{% if mensaje %}
-			<p class="alert alert-danger">{{mensaje}}</p>
-		{% endif %}
-		<div class="col-lg-10">
-			<form id="frm_persona" role="form" name="frm_persona" method="POST">
-				{% csrf_token %}
-				<fieldset>
-						<legend>Formulario Registro de Personas</legend>
-					{% for field in formulario %}
-						{% if field.html_name == 'pais_nacimiento' %}
-							<legend>Localizaci&oacute;n</legend>
-						{% endif %}
-						{% if field.html_name == 'titulos' %}
-							<legend>Datos Profesionales</legend>
-						{% endif %}
-						<div class="form-group">
-				            {{ field.errors }}
-				            {{ field.label_tag }}
-				            <div id="{{ field.html_name }}">
-				            	
-				             		{{ field }}
+{% block titulo_box %}
+	Formulario Registro de Personas
+{% endblock  %}
+
+{% block boton_box %}
+	<a title="Editar Centro" class="btn btn-default" href="javascript:cambiarEstilo();">
+			<span class="glyphicon glyphicon-edit">&nbsp;</span>Editar
+	</a>
+	<button type="submit" title="Guardar Centro" id="btn_guardar" form="frm_campus" class="btn btn-default"disabled>
+			<span class="glyphicon glyphicon-save">&nbsp;</span>Guardar
+	</button>
+{% endblock  %}
+
+{% block contenido_box %}
+	{% if mensaje %}
+		<p class="alert alert-danger">{{mensaje}}</p>
+	{% endif %}
 	
-				         	</div> {{ field.help_text }}
-				        </div>
+	<form id="frm_persona" role="form" name="frm_persona" method="POST">
+		{% csrf_token %}
+		<fieldset>
+				<legend></legend>
+			{% for field in formulario %}
+				{% if field.html_name == 'pais_nacimiento' %}
+					<legend>Localizaci&oacute;n</legend>
+				{% endif %}
+				{% if field.html_name == 'titulos' %}
+					<legend>Datos Profesionales</legend>
+				{% endif %}
+				<div class="form-group">
+		            {{ field.errors }}
+		            {{ field.label_tag }}
+		            <div id="{{ field.html_name }}">
+		            	
+		             		{{ field }}
 
-					{% endfor %}
-				</fieldset>
-				<button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-save">&nbsp;</span>Guardar</button>
-			</form>
-		</div>
-	</div>
+		         	</div> {{ field.help_text }}
+		        </div>
 
+			{% endfor %}
+		</fieldset>
+		<button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-save">&nbsp;</span>Guardar</button>
+	</form>	
 {% endblock %}
 
-{% block extrafooter %}
+{% block js %}
+{% include "utilidades/waiting_ajax.html" %}
+<script src="/media/js/select2.min.js"></script>
 <script type="text/javascript">
+	$(':input').each(function( index, obj ) {
+		if (obj.id != 'btn_guardar'){
+			$(obj).addClass('form-control');
+		}
+	});
 
-	    $('#id_departamento').attr('onchange','enviar("d");');
-		$('#id_municipio').attr('onchange','enviar("m");');
-		$('#id_aldea').attr('onchange','enviar("a");');
-		$('#id_caserio').attr('onchange','enviar("c");');
-	    //actualizaChosen(); 
-	    //$('.default').attr('style','width: 160px; height: 30px;');   
+	function width_select(){
+		$( ".select2" ).each(function( index ) {
+	 		$( this ).css('width', '100%'); // Aqui lo que hace es seleccionar todos los SELECTs con clase de 'select2', si le quita esto, en el modal los SELECTs salen super pequenios.
+		});
+	}
+
+	$("select").select2();
+	width_select();
+
+    $('#id_departamento').attr('onchange','enviar("d");');
+	$('#id_municipio').attr('onchange','enviar("m");');
+	$('#id_aldea').attr('onchange','enviar("a");');
+	$('#id_caserio').attr('onchange','enviar("c");');
+
+	function enviar(bandera){
+		var bandera=bandera;
+		var id_departamento=$("#id_departamento").val();
+		var id_municipio=$("#id_municipio").val();
+		var id_aldea=$("#id_aldea").val();
+		var id_caserio=$("#id_caserio").val();
+
+		var sendInfo = $('#frm_persona').serialize();
+
+		if (bandera=='d'){
+			name='municipio';
+			sendInfo+="&bandera="+bandera+"&id="+id_departamento+"&name="+name;
+		}else if(bandera=='m'){
+			name='aldea';
+			sendInfo+="&bandera="+bandera+"&id="+id_municipio+"&name="+name;
+		}else if(bandera=='a'){
+			name='caserio';
+			sendInfo+="&bandera="+bandera+"&id="+id_aldea+"&name="+name;
+		}else if(bandera=='c'){
+			name='barrio';
+			sendInfo+="&bandera="+bandera+"&id="+id_caserio+"&name="+name;
+		}
+		
+		//alert("id: "+id);
+		
+		
+		$('#myModal').modal('show')
+		$.post(
+        // url to post
+        "{% url 'ajax_ubicacion' %}",
+        // args
+        sendInfo,
+        // response callback
+        function(data){
+            data = jQuery.parseJSON(data)
+            $('#id_'+name).select2({
+			  data: data
+			})
+			width_select()
+        });
+	}
 </script>
 
 {% endblock %}
