--- a/UNAG/templates/general/administracion_index.html
+++ b/UNAG/templates/general/administracion_index.html
@@ -1,131 +1,35 @@
-{% extends "base.html" %}
-
-
-{% block navlist %}
-	<ul  class = "nav nav-pills nav-stacked" > 
-  	<li class="active">
-      <a href = "#">Menú Principal</a>
-    </li>
-     <li>
-      <a href = "{% url 'vista_administracion_recursohumano' %}">
-        <span class="glyphicon glyphicon-user">&nbsp;</span>Administrar recurso humano
-      </a> 
-    </li>
-    <li>
-  		<a href = "{% url 'vista_administracion_campus' %}">
-        <span class="glyphicon glyphicon-map-marker">&nbsp;</span>Campus
-      </a> 
-    </li>
-    <li>
-  		<a href = "{% url 'vista_administracion_deptos_academics' %}">
-             <span class="glyphicon glyphicon-list-alt">&nbsp;</span>Departamentos Acad&eacute;micos
-      </a> 
-    </li>
-
-    <li>
-      <a href = "{% url 'vista_administracion_carreras' %}">
-          <span class="glyphicon glyphicon-road">&nbsp;</span>Carreras
-      </a>
-    </li>
-
-    <li>
-      <a href = "{% url 'vista_administracion_tipo_asignaturas' %}">
-        <span class="glyphicon glyphicon-file">&nbsp;</span>Tipo Asignaturas
-      </a>
-    </li>
-
-    <li>
-      <a href = "{% url 'vista_administracion_asignaturas' %}">
-        <span class="glyphicon glyphicon-book">&nbsp;</span>Asignaturas
-      </a>
-    </li>
-    <!--
-     <li> 
-      <a href = "{% url 'vista_administracion_requisito' %}">     
-        <span class="glyphicon glyphicon-check">&nbsp;</span>Requisitos 
-      </a> 
-    </li>
-  -->
-    <li>
-      <a href="{% url 'vista_administracion_edificios' %}">
-        <span class="glyphicon glyphicon-leaf">&nbsp;</span>Edificios
-      </a>
-    </li>
-
-    <li>
-        <a href="{% url 'vista_administracion_dormitorios' %}">
-          <span class="glyphicon glyphicon-home">&nbsp;</span>Estructura del Edificio
-        </a>
-    </li>
-
-     <li>
-      <a href = "{% url 'vista_administracion_documentos' %}">
-        <span class="glyphicon glyphicon-file">&nbsp;</span>Documentos
-      </a>
-    </li>
-    
-     <li>
-      <a href = "{% url 'vista_administracion_tipo_cm' %}">
-             <span class="glyphicon glyphicon-warning-sign">&nbsp;</span> Tipos de Condiciones-Matricula
-      </a> 
-    </li>
-
-    
-    <li> 
-  		<a href = "{% url 'vista_administracion_centros' %}">     
-        <span class="glyphicon glyphicon-flag">&nbsp;</span>Centros de Estudio
-      </a> 
-    </li>
-    <!--
-    <li> 
-      <a href = "{% url 'vista_administracion_secciones' %}">     
-        <span class="glyphicon glyphicon-compressed">&nbsp;</span>Secciones
-      </a> 
-    </li>
-
-    <li> 
-      <a href = "{% url 'vista_administracion_secciones' %}">     
-        <span class="glyphicon glyphicon-dashboard">&nbsp;</span>Horarios
-      </a> 
-    </li>
-   -->
-<!--
-    <li>
-      <a href = "{% url 'vista_administracion_usuarios' %}">
-        <span class="glyphicon">&nbsp;</span>Creacion de Usuarios
-      </a>
-    </li>
-    <li>
-      <a href = "{% url 'vista_administracion_estudiantes' %}">
-        <span class="glyphicon">&nbsp;</span>Alumnos<span class=""></span>
-      </a>
-    </li>
-    <li>
-      <a href = "{% url 'vista_administracion_profesores' %}">
-        <span class="glyphicon">&nbsp;</span>Docentes
-      </a>
-    </li>
-    -->
-    
-	</ul>
-{% endblock %}
+{% extends "general/menu.html" %}
+{% block header %}
+  <h1>
+   Administración
+    <small>Configuraciones generales del sistema</small>
+  </h1>
+  <ol class="breadcrumb">
+    <li><i class="fa fa-dashboard"></i> Administración</li>
+    <li>Inicio</li>
+  </ol>
+{% endblock  %}
 
 {% block container %}
-    <div class="row">
-        <div class="col-lg-12">
-         
-            <br/><br/>
-             <legend><h1>Bienvenido :  {{user.username}} </h1></legend>
-              <div class="alert alert-info">
-              <h2>  <span class="label label-primary"> Descripción: </span> </h2> <h3>El modulo de administraci&oacute;n le ayudará a  realizar operaciones de mantenimiento en el sistema.</h3>
-             <br/>
-              
-             <div >
-             <h2> <span class="label label-primary">Informaci&oacute;n Adicional :</span></h2>
-                <h3>Utilice las opciones del Menu Izquierdo para ver o modificar informaci&oacute;n.</h3>
-            </div>
-          </div>
-        </div>
-    </div>
+<div class="box">
+   <div class="box-header with-border">
+      <h3 class="box-title">Title</h3>
+      <div class="box-tools pull-right">
+         <button class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse"><i class="fa fa-minus"></i></button>
+         <button class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i></button>
+      </div>
+   </div>
+   <div class="box-body">
+      El modulo de administración le ayudará a realizar operaciones de mantenimiento en el sistema.
+   </div>
+   <div class="box-footer">
+      Footer
+   </div>
+</div>
 {% endblock %}
+   
+Descripción:
 
+
+Información Adicional :
+Utilice las opciones del Menu Izquierdo para ver o modificar información.
