--- a/UNAG/templates/general/dormitorios_nuevo.html
+++ b/UNAG/templates/general/dormitorios_nuevo.html
@@ -1,44 +1,51 @@
-{% extends "general/administracion_index.html" %}
+{% extends "general/menu.html" %}
+{% block header %}
+  <h1>
+  Dormitorio
+  </h1>
+  <ol class="breadcrumb">
+    <li><i class="fa fa-dashboard"></i> Administración</li>
+    <li>Dormitorio</li>
+    <li>Agregar</li>
+  </ol>
+{% endblock  %}
 
-{% block head%}
-	<script type="text/javascript">
+{% block titulo_box %}
+	Agregar Dormitorio
+{% endblock  %}
 
-		$(document).ready(function(){
-			$('#id_ocupados').hide()
-		});
-	</script>
-
+{% block contenido_box %}
+	<form id="frm_dormitorio" name="frm_dormitorio" action="." method="POST">{% csrf_token %}	
+		{% if formulario.errors %}				
+			<div class="alert alert-danger">
+					<h4>Formulario contiene errores!!</h4>
+			</div>
+		{% else %}
+			{% if ultimo %}
+				<div class="alert alert-success">
+					<p><h4>Último espacio guardado!!</h4>
+					{% for c in ultimo %} <b>"{{ c.descripcion }}" en el edificio "{{ c.edificio }}" el {{c.fecha_creacion}}</b> {% endfor %}<p>
+				</div>
+			{% endif %}
+		{% endif %}
+		{{formulario.as_p}}
+		<button type="submit" class="btn btn-primary">
+			<span class="glyphicon glyphicon-save">&nbsp;</span>Guardar</button>
+	</form>
 {% endblock %}
 
-{% block container %}
-	<div class="container">
-		<legend>Nuevo Espacio en Edificio <a href="{% url 'vista_administracion_dormitorios' %}" class="btn btn-success btn-sm pull-right"><span class="glyphicon glyphicon-arrow-left">&nbsp;</span>ATRAS</a></legend>
-		<div class="col-lg-8">
-			<form id="frm_dormitorio" name="frm_dormitorio" action="." method="POST">{% csrf_token %}	
-				{% if formulario.errors %}				
-					<div class="alert alert-danger">
-							<h4>Formulario contiene errores!!</h4>
-					</div>
-				{% else %}
-					<div class="alert alert-success">
-							<p><h4>Último espacio guardado!!</h4>
-							{% for c in ultimo %} <b>"{{ c.descripcion }}" en el edificio "{{ c.edificio }}" el {{c.fecha_creacion}}</b> {% endfor %}<p>
-					</div>
-				{% endif %}
-				{{formulario.as_p}}
-				<button type="submit" class="btn btn-primary">
-					<span class="glyphicon glyphicon-save">&nbsp;</span>Guardar</button>
-			</form>
-		</div>
-	</div>
-{% endblock %}
-
-{% block extrafooter %}
+{% block js %}
 <script type="text/javascript">
+	$(document).ready(function(){
+		$('#id_ocupados').hide()
+
+		$(':input').each(function( index, obj ) {
+			$(obj).addClass('form-control')
+		});
+	});
 	$('label[for="id_ocupados"]').hide();
 	$('#id_ocupados').hide();
 	$("#id_edificio").attr("onchange", "enviar();");
-	actualizaChosen();
 	$('#id_capacidad_personas').attr('onkeypress','return permite(event, "num");'); 
 	$('#id_ocupados').attr('onkeypress','return permite(event, "num");');
 
@@ -52,10 +59,10 @@
             "{% url 'vista_ajax_dormitorio' %}",
             sendInfo,
             function(data){
-            	
+            	console.log('paso por aqui')
             	var valor = jQuery.parseJSON(data);
+            	console.log(valor.tipo)
             	if(valor.tipo=='3'){
-            		
             		$('label[for="id_ocupados"]').show();
 					$('#id_ocupados').show();
             	}else{
