--- a/UNAG/templates/general/edificios_detalle.html
+++ b/UNAG/templates/general/edificios_detalle.html
@@ -1,49 +1,52 @@
-{% extends "general/administracion_index.html" %}
+{% extends "general/menu.html" %}
+{% block header %}
+  <h1>
+  Edificio
+  </h1>
+  <ol class="breadcrumb">
+    <li><i class="fa fa-dashboard"></i> Administración</li>
+    <li>Edificio</li>
+    <li>Detalles</li>
+  </ol>
+{% endblock  %}
 
-{% block container %}
-	<div class="col-lg-12 well">
-		<h4>Detalle del Edificio</h4>			
-	</div>
+
+{% block titulo_box %}
+	Detalles Edificios
+{% endblock  %}
+
+{% block boton_box %}
+	{% if perms.general.change_edificios %}
+		<a title="Editar_Edificio" class="btn btn-default" href="javascript:cambiarEstilo();">
+				<span class="glyphicon glyphicon-edit">&nbsp;</span>Editar
+		</a>
+		<button type="submit" title="Nuevo_Edificio" form="frm_edificio_detalle" id="btn_guardar" class="btn btn-default"disabled>
+				<span class="glyphicon glyphicon-save">&nbsp;</span>Guardar
+		</button>
+	{% endif %}
+{% endblock  %}
+
+{% block contenido_box %}
 	<form id="frm_edificio_detalle" name="frm_edificio_detalle" action="." method="POST">{% csrf_token %}
-		<div class="panel panel-default">
-			{% if perms.general.change_edificios %}
-			<div class="panel-heading">
-				<a title="Editar_Edificio" class="btn btn-default" href="javascript:cambiarEstilo();">
-						<span class="glyphicon glyphicon-edit">&nbsp;</span>Editar
-				</a>
-				<button type="submit" title="Nuevo_Edificio" id="btn_guardar" class="btn btn-default"disabled>
-						<span class="glyphicon glyphicon-save">&nbsp;</span>Guardar
-				</button>
-
-				<a href="{% url 'vista_administracion_edificios' %}" class="btn btn-success btn-sm pull-right"><span class="glyphicon glyphicon-arrow-left">&nbsp;</span>ATRAS</a>
-
-			</div>
-			{% endif %}
-			<div class="panel-body">
-				<div class="row">
-					<div class="col-lg-6">
-						{{formulario.as_p}}
-					</div>
-				</div>
-			</div>
-		</div>
+		{{formulario.as_p}}
 	</form>
 {% endblock %}
-{% block extrafooter %}
+{% block js %}
 	<script type="text/javascript">
-		function cambiarEstilo(){
-				$('input').removeAttr("disabled");
-				$('#btn_guardar').removeAttr("disabled");	
-				$('input').removeAttr("disabled");
-				$('textarea').removeAttr("disabled");
-				$('select').removeAttr("disabled");	
+		
+		$(':input').each(function( index, obj ) {
+			if (obj.id != 'btn_guardar'){
+				$(obj).prop('disabled', true).addClass('form-control');
+			}
+		});
 
-				restaurarValor("id_tipo_edificio");	
-				restaurarValor("id_campus");	
-				
-		}
+		function cambiarEstilo(){
+			$('input').removeAttr("disabled");
+			$('#btn_guardar').removeAttr("disabled");	
+			$('input').removeAttr("disabled");
+			$('textarea').removeAttr("disabled");
+			$('select').removeAttr("disabled");		
 			
-		inhabilitar_controles();
-		actualizaChosen();
+		}
 	</script>
 {% endblock %}
