--- a/UNAG/templates/general/edificios_index.html
+++ b/UNAG/templates/general/edificios_index.html
@@ -1,71 +1,73 @@
-{% extends "general/administracion_index.html" %}
+{% extends "general/menu.html" %}
+{% block header %}
+  <h1>
+  Edificio
+  </h1>
+  <ol class="breadcrumb">
+    <li><i class="fa fa-dashboard"></i> Administración</li>
+    <li>Edificio</li>
+  </ol>
+{% endblock  %}
 
-{% block container %}
-	<div class="row">
-		<legend>Edificios<a href="{% url 'vista_main_first' %}" class="btn btn-success btn-sm pull-right"><span class="glyphicon glyphicon-arrow-left">&nbsp;</span>ATRAS</a></legend>
-		{% if perms.general.add_edificios %}
-		<div class="col-lg-12 well">
-			<div class="btn-group btn-proup-sm">
-				<a title="Nuevo Edificios" class="btn btn-default" href="{% url 'vista_nuevo_edificio' %}">
-					<span class="glyphicon glyphicon-plus">&nbsp;</span>Nuevo
-				</a>
-			</div>
-		</div>
-		{% endif %}
-		
-		<div class="panel panel-default">
-			<div class="panel-heading"><h4>Lista de Edificios</h4></div>
-			<div class="panel-body">
-				<table class="table table-striped table-bordered table-hover table-condensed" style="text-align:left">
-					<thead>
-						<tr>
-							<th>Nombre</th>
-							<th>Ubicacion</th>
-							<th>Tipo</th>
-							<th>Campus</th>
-							<th>Capacidad de Personas</th>
-							<th>Cantidad espacios</th>
-							<th colspan="2">Acción</th>
 
-						</tr>
-					</thead>
-					<tbody>
+{% block titulo_box %}
+	Detalles Edificios
+{% endblock  %}
 
-						{% for e in edificios %}	
+{% block boton_box %}
+	<a title="Nuevo Edificios" class="btn btn-default" href="{% url 'vista_nuevo_edificio' %}">
+		<span class="glyphicon glyphicon-plus">&nbsp;</span>Nuevo
+	</a>
+{% endblock  %}
 
-							 <tr>
-							 		<td>{{ e.nombre }}</td>
-							 		<td>{{ e.ubicacion }}</td>
-							 		<td>{{ e.tipo_edificio }}</td>
-							 		<td>{{ e.campus }}</td>
-							 		<td>{{ e.capacidad_total_personas }}</td>
-							 		<td>{{ e.cantidad_dormitorios }}</td>
+{% block contenido_box %}
+	<table class="table table-striped table-bordered table-hover table-condensed" style="text-align:left">
+		<thead>
+			<tr>
+				<th>Nombre</th>
+				<th>Ubicacion</th>
+				<th>Tipo</th>
+				<th>Campus</th>
+				<th>Capacidad de Personas</th>
+				<th>Cantidad espacios</th>
+				<th colspan="2">Acción</th>
 
-							 		<td>
-										<center>
-										<a title="Ver" href="{% url 'vista_detalle_edificios' e.pk %}" class="btn btn-success">
-										<span class="glyphicon glyphicon-eye-open"></span>
-										</a>
-										</center>
-									</td>
+			</tr>
+		</thead>
+		<tbody>
 
-									<td>
-										{% if perms.general.delete_edificios %}
-										<center>
-										<a href="{% url 'vista_borrar_edificios' e.pk %}" title="Borrar" class="btn btn-danger" onclick="return confirm('¿Esta seguro que quiere eliminar de la base de datos este registro?');">
-										<span class="glyphicon glyphicon-remove-circle"></span>
-										</a>
-										</center>
-										{% endif %}
-									</td>
+			{% for e in edificios %}	
 
-							</tr>
+				 <tr>
+				 		<td>{{ e.nombre }}</td>
+				 		<td>{{ e.ubicacion }}</td>
+				 		<td>{{ e.tipo_edificio }}</td>
+				 		<td>{{ e.campus }}</td>
+				 		<td>{{ e.capacidad_total_personas }}</td>
+				 		<td>{{ e.cantidad_dormitorios }}</td>
 
-						{% endfor %}
+				 		<td>
+							<center>
+							<a title="Ver" href="{% url 'vista_detalle_edificios' e.pk %}" class="btn btn-success">
+							<span class="glyphicon glyphicon-eye-open"></span>
+							</a>
+							</center>
+						</td>
 
-					</tbody>
-				</table>
-			</div>				
-		</div>
-	</div>
+						<td>
+							{% if perms.general.delete_edificios %}
+							<center>
+							<a href="{% url 'vista_borrar_edificios' e.pk %}" title="Borrar" class="btn btn-danger" onclick="return confirm('¿Esta seguro que quiere eliminar de la base de datos este registro?');">
+							<span class="glyphicon glyphicon-remove-circle"></span>
+							</a>
+							</center>
+							{% endif %}
+						</td>
+
+				</tr>
+
+			{% endfor %}
+
+		</tbody>
+	</table>
 {% endblock %}
