--- a/UNAG/templates/registro/asignaturas_detalle.html
+++ b/UNAG/templates/registro/asignaturas_detalle.html
@@ -1,48 +1,49 @@
-{% extends "general/administracion_index.html" %}
+{% extends "general/menu.html" %}
+{% block header %}
+  <h1>
+  Asignatura
+  </h1>
+  <ol class="breadcrumb">
+    <li><i class="fa fa-dashboard"></i> Administración</li>
+    <li>Asignatura</li>
+    <li>Detalles</li>
+  </ol>
+{% endblock  %}
 
-{% block container %}
-	<div class="col-lg-12 well">
-		<h4>Detalle de Asignaturas</h4>			
-	</div>
+
+{% block titulo_box %}
+	Detalle de Asignaturas
+{% endblock  %}
+
+{% block boton_box %}
+	<a title="Editar Documento" class="btn btn-default" href="javascript:cambiarEstilo();">
+			<i class="glyphicon glyphicon-edit"></i>Editar
+	</a>
+	<button type="submit" title="Guardar Documento" id="btn_guardar" form="frm_campus" class="btn btn-default"disabled>
+			<i class="glyphicon glyphicon-save"></i>Guardar
+	</button>
+{% endblock  %}
+
+{% block contenido_box %}
 	<form id="frm_campus" name="frm_campus" action="." method="POST">{% csrf_token %}
-		<div class="panel panel-default">
-			{% if perms.registro.change_asignatura %}
-			<div class="panel-heading">
-				<a title="Editar Documento" class="btn btn-default" href="javascript:cambiarEstilo();">
-						<span class="glyphicon glyphicon-edit">&nbsp;</span>Editar
-				</a>
-				<button type="submit" title="Guardar Documento" id="btn_guardar" class="btn btn-default"disabled>
-						<span class="glyphicon glyphicon-save">&nbsp;</span>Guardar
-				</button>
-
-				<a href="{% url 'vista_administracion_asignaturas' %}" class="btn btn-success btn-sm pull-right"><span class="glyphicon glyphicon-arrow-left">&nbsp;</span>ATRAS</a>
-
-			</div>
-			{% endif %}
-			<div class="panel-body">
-				<div class="row">
-					<div class="col-lg-6">
-						{{formulario.as_p}}
-					</div>
-				</div>
-			</div>
-		</div>
+		{{formulario.as_p}}
 	</form>
 {% endblock %}
 
-{% block extrafooter %}
+{% block js %}
 	<script type="text/javascript">
+		$(':input').each(function( index, obj ) {
+			if (obj.id != 'btn_guardar'){
+				$(obj).prop('disabled', true).addClass('form-control');
+			}
+		});
+
 		function cambiarEstilo(){
 				$('input').removeAttr("disabled");
 				$('#btn_guardar').removeAttr("disabled");	
 				$('input').removeAttr("disabled");
 				$('textarea').removeAttr("disabled");
 				$('select').removeAttr("disabled");
-				restaurarValor("id_carrera");	
-				restaurarValor("id_tipo_asignatura");	
 		}
-			
-		inhabilitar_controles();
-		actualizaChosen();
 	</script>
 {% endblock %}
