--- a/UNAG/templates/registro/carreras_index.html
+++ b/UNAG/templates/registro/carreras_index.html
@@ -1,66 +1,68 @@
-{% extends "general/administracion_index.html" %}
+{% extends "general/menu.html" %}
+{% block header %}
+  <h1>
+   Carreras
+  </h1>
+  <ol class="breadcrumb">
+    <li><i class="fa fa-dashboard"></i> Administración</li>
+    <li>Carreras</li>
+  </ol>
+{% endblock  %}
 
-{% block container %}
-	<div class="row">
-		<legend>Carreras<a href="{% url 'vista_main_first' %}" class="btn btn-success btn-sm pull-right"><span class="glyphicon glyphicon-arrow-left">&nbsp;</span>ATRAS</a></legend>
-		{% if perms.registro.add_carrera %}
-		<div class="col-lg-12 well">
-			<div class="btn-group btn-proup-sm">
-				<a title="Nuevo Campus" class="btn btn-default" href="{% url 'vista_nueva_carrera' %}">
-					<span class="glyphicon glyphicon-plus">&nbsp;</span>Nuevo
-				</a>
-			</div>
-		</div>
-		{% endif %}
-		
-		<div class="panel panel-default">
-			<div class="panel-heading"><h4>Lista de Carreras</h4></div>
-			<div class="panel-body">
-				<table class="table table-striped table-bordered table-hover table-condensed">
-					<thead>
-						<tr>
-							<th>Carrera</th>
-							<th>Duración(años)</th>
-							<th>Modalidad</th>
-							<th>Campus</th>
-							<th>Grupo</th>
-							<th>Departamento</th>
-							<th>Responsable</th>
-							<th colspan="2">Acción</th>							
-						</tr>
-					</thead>
-					<tbody>
-						{% for c in carrera %}
-							<tr>
-								<td>{{c.nombre_carrera}}</td>
-								<td>{{c.duracion}}</td>
-								<td>{{c.modalidad}}</td>
-								<td>{{c.campus}}</td>
-								<td>{{c.grado}}</td>
-								<td>{{c.depto_academico}}</td>
-								<td>{{c.persona_responsable}}</td>
-								<td>
-									<center>
-										<a title="Ver" href="{% url 'vista_detalle_carreras' c.pk %}" class="btn btn-success">
-											<span class="glyphicon glyphicon-eye-open"></span>
-										</a>
-									</center>
-								</td>								
-								<td>
-									{% if perms.registro.delete_carrera %}
-									<center>
-										<a  href="{% url 'vista_borrar_carrera' c.pk %}" title="Borrar" class="btn btn-danger" onclick="return confirm('¿Esta seguro que quiere eliminar la carrera <<{{ c.nombre_carrera }}>>?');">
-											<span class="glyphicon glyphicon-remove-circle"></span>
-										</a>
-									</center>
-									{% endif %}
-								</td>
-							</tr>
+{% block titulo_box %}
+	Lista de Carreras
+{% endblock  %}
 
-						{% endfor %}
-					</tbody>
-				</table>
-			</div>				
-		</div>
-	</div>
+{% block boton_box %}
+	<a title="Nuevo Campus" class="btn btn-default" href="{% url 'vista_nueva_carrera' %}">
+		<span class="glyphicon glyphicon-plus">&nbsp;</span>Nuevo
+	</a>
+{% endblock  %}
+
+{% block contenido_box %}
+	<table class="table table-striped table-bordered table-hover table-condensed">
+		<thead>
+			<tr>
+				<th>Carrera</th>
+				<th>Duración(años)</th>
+				<th>Modalidad</th>
+				<th>Campus</th>
+				<th>Grupo</th>
+				<th>Departamento</th>
+				<th>Responsable</th>
+				<th colspan="2">Acción</th>							
+			</tr>
+		</thead>
+		<tbody>
+			{% for c in carrera %}
+				<tr>
+					<td>{{c.nombre_carrera}}</td>
+					<td>{{c.duracion}}</td>
+					<td>{{c.modalidad}}</td>
+					<td>{{c.campus}}</td>
+					<td>{{c.grado}}</td>
+					<td>{{c.depto_academico}}</td>
+					<td>{{c.persona_responsable}}</td>
+					<td>
+						<center>
+							<a title="Ver" href="{% url 'vista_detalle_carreras' c.pk %}" class="btn btn-success">
+								<span class="glyphicon glyphicon-eye-open"></span>
+							</a>
+						</center>
+					</td>								
+					<td>
+						{% if perms.registro.delete_carrera %}
+						<center>
+							<a  href="{% url 'vista_borrar_carrera' c.pk %}" title="Borrar" class="btn btn-danger" onclick="return confirm('¿Esta seguro que quiere eliminar la carrera <<{{ c.nombre_carrera }}>>?');">
+								<span class="glyphicon glyphicon-remove-circle"></span>
+							</a>
+						</center>
+						{% endif %}
+					</td>
+				</tr>
+
+			{% endfor %}
+		</tbody>
+	</table>
 {% endblock %}
+
