--- a/UNAG/templates/registro/departamento_academico_nuevo.html
+++ b/UNAG/templates/registro/departamento_academico_nuevo.html
@@ -1,31 +1,34 @@
-{% extends "general/administracion_index.html" %}
+{% extends "general/menu.html" %}
+{% block header %}
+  <h1>
+   Campus
+  </h1>
+  <ol class="breadcrumb">
+    <li><i class="fa fa-dashboard"></i>Administración </li>
+    <li>Departamentos Académicos</li>
+    <li>Agregar</li>
+  </ol>
+{% endblock  %}
 
-{% block container %}
-	<div class="container">
-		<legend>Nuevo Departamento Acad&eacute;mico <a href="{% url 'vista_administracion_deptos_academics' %}" class="btn btn-success btn-sm pull-right"><span class="glyphicon glyphicon-arrow-left">&nbsp;</span>ATRAS</a></legend>
-		<div class="col-lg-8">
-			<form id="frm_depto_academico" name="frm_depto_academico" action="." method="POST">
-				{% csrf_token %}
-				{% if formulario.errors %}				
-					<div class="alert alert-danger">
-							<h4>Formulario contiene errores!!</h4>
-					</div>
-				{% else %}
-					<div class="alert alert-success">
-							<p><h4>Último Departamento académico guardado!!</h4>
-							{% for c in ultimo %} <b>"{{ c.descripcion }}" el {{c.fecha_creacion}}</b> {% endfor %}<p>
-					</div>
-				{% endif %}	
-				{{formulario.as_p}}
-				<button type="submit" class="btn btn-primary">
-					<span class="glyphicon glyphicon-save">&nbsp;</span>Guardar</button>
-			</form>
-		</div>
-	</div>
-{% endblock %}
+{% block titulo_box %}
+	Lista de Departamentos Académicos
+{% endblock  %}
 
-{% block extrafooter %}
-<script type="text/javascript">
-	actualizaChosen();
-</script>
+{% block contenido_box %}
+	<form id="frm_depto_academico" name="frm_depto_academico" action="." method="POST">
+		{% csrf_token %}
+		{% if formulario.errors %}				
+			<div class="alert alert-danger">
+					<h4>Formulario contiene errores!!</h4>
+			</div>
+		{% else %}
+			<div class="alert alert-success">
+					<p><h4>Último Departamento académico guardado!!</h4>
+					{% for c in ultimo %} <b>"{{ c.descripcion }}" el {{c.fecha_creacion}}</b> {% endfor %}<p>
+			</div>
+		{% endif %}	
+		{{formulario.as_p}}
+		<button type="submit" class="btn btn-primary">
+			<span class="glyphicon glyphicon-save">&nbsp;</span>Guardar</button>
+	</form>
 {% endblock %}
