--- a/UNAG/templates/home/menu_principal.html
+++ b/UNAG/templates/home/menu_principal.html
@@ -29,7 +29,7 @@
 	<div class="col-md-4"  style="vertical-align:middle;">
 		<div class="well">
 			<center>
-				<a href="">
+				<a href="{% url 'nuevo_docente' %}">
 					<img src="/media/images/teacher.png"  width="150" height="150">
 					<h3>Catedrático</h3>
 				</a>
